@@ -1,13 +1,2 @@
 e17: setuid-binary usr/lib/enlightenment/modules/cpufreq/ARCH_PATH/freqset 4755 root/root
 e17: setuid-binary usr/lib/enlightenment/utils/enlightenment_sys 4755 root/root
-e17: image-file-in-usr-lib usr/lib/enlightenment/modules/illume-keyboard/keyboards/alpha.png
-e17: image-file-in-usr-lib usr/lib/enlightenment/modules/illume-keyboard/keyboards/backspace.png
-e17: image-file-in-usr-lib usr/lib/enlightenment/modules/illume-keyboard/keyboards/down.png
-e17: image-file-in-usr-lib usr/lib/enlightenment/modules/illume-keyboard/keyboards/enter.png
-e17: image-file-in-usr-lib usr/lib/enlightenment/modules/illume-keyboard/keyboards/left.png
-e17: image-file-in-usr-lib usr/lib/enlightenment/modules/illume-keyboard/keyboards/numeric.png
-e17: image-file-in-usr-lib usr/lib/enlightenment/modules/illume-keyboard/keyboards/qwerty.png
-e17: image-file-in-usr-lib usr/lib/enlightenment/modules/illume-keyboard/keyboards/right.png
-e17: image-file-in-usr-lib usr/lib/enlightenment/modules/illume-keyboard/keyboards/shift.png
-e17: image-file-in-usr-lib usr/lib/enlightenment/modules/illume-keyboard/keyboards/tab.png
-e17: image-file-in-usr-lib usr/lib/enlightenment/modules/illume-keyboard/keyboards/up.png
